# proton-prefix-manager

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: error.rs  main.rs  test_helpers.rs
src/cli/: backup.rs  clear_cache.rs  config.rs  config_paths.rs  delete_backup.rs  list_backups.rs  mod.rs  open.rs  prefix.rs  protontricks.rs  repair.rs  reset.rs  restore.rs  search.rs  userdata.rs  winecfg.rs
src/core/: mod.rs  models.rs  steam.rs
src/gui/: advanced_search.rs  app.rs  backup_manager.rs  details.rs  game_list.rs  mod.rs  runtime_cleaner.rs  sort.rs
src/utils/: backup.rs  dependencies.rs  library.rs  logging.rs  manifest.rs  mod.rs  output.rs  prefix_repair.rs  prefix_validator.rs  proton.rs  runtime_cleaner.rs  steam_paths.rs  terminal.rs  user_config.rs
