[package]
name = "proton-prefix-finder"
version = "0.1.0"
edition = "2021"
description = "A tool to find and manage Proton prefixes for Steam games on Linux"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/D1G1T4L3CH0/proton-prefix-manager"
readme = "README.md"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
dirs = "6.0.0"
dirs-next = "2"
eframe = "0.31.1"
lazy_static = "1.5.0"
once_cell = "1.19.0"
regex = "1.11.1"
tokio = { version = "1.43.0", features = ["rt", "sync"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
open = "3.2.0"
chrono = "0.4.31"
clipboard = "0.5.0"
log = "0.4"
env_logger = "0.10"
thiserror = "1.0.57"
anyhow = "1.0.80"
rayon = "1.8.0"

[dev-dependencies]
tempfile = "3.10.1"
