[package]
name = "proton-prefix-manager"
version = "0.1.0"
edition = "2021"
description = "A tool to find and manage Proton prefixes for Steam games on Linux"
authors = ["D1G1T4L3CH0 <D1G1T4L3CH0@users.noreply.github.com>"]
license = "MIT"
repository = "https://github.com/D1G1T4L3CH0/proton-prefix-manager"
readme = "README.md"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
dirs = "6.0.0"
dirs-next = "2"
eframe = "0.31.1"
lazy_static = "1.5.0"
once_cell = "1.19.0"
regex = "1.11.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
open = "5"
tinyfiledialogs = "3.9.1"
chrono = "0.4.31"
log = "0.4"
env_logger = "0.11"
thiserror = "2"
anyhow = "1.0.80"
rayon = "1.8.0"
which = "8"
keyvalues-parser = "0.2.0"
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.10.1"
